# Kanban_board

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  skills-lock.json
.claude/: ralph-loop.local.md  settings.local.json
backend/: pyproject.toml
backend/app/: ai_client.py  auth.py  board_seed.py  db.py  main.py  schemas.py
backend/static/: index.html
backend/tests/: test_ai_api.py  test_ai_client.py  test_auth_api.py  test_board_api.py  test_multi_board_api.py
docs/: DB_SCHEMA.md  PLAN.md  RUN.md  code_review.md
frontend/: AGENTS.md  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  page.test.tsx  page.tsx
frontend/src/components/: AiSidebar.test.tsx  AiSidebar.tsx  BoardDashboard.test.tsx  BoardDashboard.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.test.ts  api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: start-server.ps1  start-server.sh  stop-server.ps1  stop-server.sh  test-all.ps1
