[project]
name = "pm-backend"
version = "0.1.0"
description = "Backend service for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.1,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "uvicorn[standard]>=0.38.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9.0.0",
]
